--- a/css/styles.css
+++ b/css/styles.css
@@ -65,17 +65,17 @@ html{
 }
 
 .nav2-oculto-container{
-    display: flex;
-    gap: 3em;
     margin-top: 20px;
-    position: absolute;
     background-color: #74A4D4;
-    padding: 20px;
-    top: 10px;
-    left: 280px;
-    opacity: 0;
-    z-index: -1;
+    font-size: 1.5em;
+    display: flex;
+    gap: 1em;
+    transition: height 0.5s ease-in-out;
+    height: 0;
+    overflow: hidden;
+
 }
+
 
 .nav2-items{
     text-decoration: none;
