--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,10 @@
 
 html{
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
 }
 
 /* Header */
@@ -102,7 +106,7 @@ html{
 /* Header body */
 
 header{
-    background-color: #0F5499;
+    background-color:#0F5499;
 }
 
 .header-body{
@@ -135,6 +139,9 @@ header{
     top: -625px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
     gap: 10px;
 }
 
@@ -143,11 +150,11 @@ header{
     color: #EDF3F9;
 }
 
+.subtitle-container{
+    max-width: 800px;
+}
+
 .subtitle{
-    width: 750px;
-    text-align: center;
-    position: relative;
-    left: 280px;
     font-size: 1.5em;
     color: #EDF3F9;
 }
@@ -481,4 +488,115 @@ main{
     bottom: 30px;
     z-index: 100;
     cursor: pointer;
+}
+
+@media(max-width: 800px){
+
+    html, body{
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+        width: 100%;
+    }
+    .nav1-container{
+        gap: 0;
+    }
+
+    .nav1-items-container{
+        margin-left: 30px;
+        gap: 2em;
+        font-size: .75em;
+    }
+
+    .nav2--show{
+        margin-top: -30px;
+    }
+
+    .ingresar-btn{
+        font-weight: 400;
+        padding: 10px;
+        padding-left: 20px;
+        margin-left: 50px;
+        width: 70px;
+        border-radius: 10px;
+        font-size: 1rem;
+    }
+
+    .title{
+        margin-top: 100px;
+        font-size: 2.5em;
+    }
+
+    .subtitle-container{
+        max-width: 600px;
+    }
+
+    .subtitle{
+        font-size: 1em;
+    }
+
+    .text-container{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        gap: 1em;
+    }
+
+    .second-title{
+        font-size: 1.5em;
+        width: max-content;
+    }
+
+    .second-text{
+        font-size: 1em;
+    }
+
+    .imagen-importante-container{
+        width: fit-content;
+        height: fit-content;
+        display: flex;
+        justify-content: center;
+    }
+
+    .imagen-importante{
+        width: 85%;
+        border-radius: 35px;
+        margin: 0;
+    }
+
+    .slider-container{
+        max-height: 500px;
+        margin-top: 10px;
+    }
+
+    .slider-imgs{
+        max-width: 500px;
+        max-height: 500px;
+    }
+
+    .hover-container{
+        max-width: 800px;
+    }
+
+    .galeria-imgs{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 0;
+        
+    }
+
+    .return-up-button{
+        position: absolute;
+        top: 2200px;
+        left: 20px
+    }
+
+    .whatsapp-item{
+        width: 7.5%;
+        padding: 5px;
+        position: fixed;
+        
+        
+    }
+
 }
